--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=cherry
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=CherryDB
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=CherryDB;integratedAuthentication=true;encrypt=true;trustServerCertificate=true
 spring.datasource.username=username
 spring.datasource.password=password
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.hibernate.ddl-auto=create
