--- a/compose.yaml
+++ b/compose.yaml
@@ -1,9 +1,11 @@
 services:
-  postgres:
-    image: 'postgres:latest'
-    environment:
-      - 'POSTGRES_DB=mydatabase'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
+  database:
+    image: 'mcr.microsoft.com/mssql/server'
     ports:
-      - '5432'
+      - '1433'
+    environment:
+      - 'ACCEPT_EULA=Y'
+      - 'SA_PASSWORD=P4ssw0rd$good'
+      - 'MSSQL_USER=username'
+      - 'MSSQL_DB=CherryDB'
+      - 'MSSQL_PASSWORD=P4ssw0rd$good'
